# design

./: .gitignore  .npmrc  AGENTS.md  README.md  biome.json  competitive-analysis.md  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-nexu-client.bat  tsconfig.base.json  wrangler.jsonc  wrangler.toml
.changeset/: README.md  activity-bar-glass-dark-native-vibrancy.md  chat-message-reaction-click-and-broken-image-fallback.md  config.json  dark-mode-surface-ladder.md  frank-carrots-ring.md  fresh-bees-wonder.md  fresh-menus-hover.md  interactive-row-subtle-hover.md  overlay-edge-dark-reinforce.md  plain-shrimps-cheat.md  stepper-onboarding-polish.md  tender-eagles-type.md  text-link-inline-size-inherit.md  ui-web-compiled-styles-fix.md  weak-oranges-laugh.md  witty-fans-relax.md
.cursor/: hooks.json
.ralph/: ralph-history.json  ralph-loop.state.json  ralph-tasks.md
.vaunt/: config.yaml
apps/demo/src-tauri/: Cargo.toml  tauri.conf.json
apps/demo/src-tauri/capabilities/: default.json
apps/demo/src-tauri/src/: lib.rs  main.rs
design-md/: README.md
docs/: cloud-demo-migration-plan.md  component-api-guidelines.md  copy-and-localization.md  core-component-api-specs.md  design-system-guidelines.md  desktop-demo-migration-plan.md  nexu-component-library-implementation-plan.md  nexu-design-component-library-implementation-plan.md  package-publishing-and-consumption.md  refly-design-system-compare-16c4fd8..b2b29ea.patch  release-flow.md
scripts/: assert-ui-web-dist-css.mjs  check-docs-metadata.mjs  check-interactive-typography.mjs  (+1 more)
(+514 files in other folders)
