[package]
name = "nexu"
version = "0.1.0"
description = "Nexu — Your mind, extended."
authors = ["Nexu Team"]
license = "MIT"
repository = "https://github.com/refly-ai/nexu"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nexu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.6", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.3"
